2005-07-02  Roger Leigh  <rleigh@debian.org>

	* Updated README (translation and usage examples).

	* po/en_GB.po: Add British English translation.

	* po/en.po: Remove.

2005-06-25  Roger Leigh  <rleigh@debian.org>

	* debian/control (Standards-Version): Upgrade to Standards-Version
	3.6.2.

2005-06-25  Roger Leigh  <rleigh@debian.org>

	* configure.ac, NEWS, debian/changelog: Increase version number to
	0.1.2.

2005-06-25  Roger Leigh  <rleigh@debian.org>

	* Remove UCS characters from string literals.  For the time being,
	gettext will have to handle this.

	* Update .cvsignore files.

	* TODO: Remove gettext item.

	* po/en.po: Add an English translation, to make use of UTF-8
	characters.

	* schroot/Makefile.am, schroot/*.c: Mark up strings for
	translation with gettext, and add gettext and locale
	initialisation code to main().

	* Add po/POTFILES.in with all C source files included.

	* Add additional options to po/Makevars, to make xgettext read
	the source as UTF-8.

	* bootstrap, configure.ac, Makefile.am: add GNU gettext support.

2005-06-21  Roger Leigh  <rleigh@debian.org>

	* Version 0.1.1.

	* schroot/sbuild-config.c (sbuild_config_validate_chroots):
	  use g_return_val_if_fail, not g_return_if_fail.

	* configure.ac: Remove the automake "tar-pax" option, because the
	  Debian build infrastructure can't cope with it yet.

2005-06-21  Roger Leigh  <rleigh@debian.org>

	* Change all GPL boilerplate to use the new FSF postal address.

2005-06-21  Roger Leigh  <rleigh@debian.org>

	* debian/copyright:
	  - Update the postal address of the FSF.
	  - Refer to /usr/share/common-licenses/GPL.
	  - Add new download location.

	* Makefile.am: Remove CVS directories from the generated tarball.

	* schroot/schroot.conf.5.in: Correct .TH section from 1 to 5.

	* Remove debian/conffiles, which is not required by debhelper.

	* debian/control: Add buildd-tools developers to
	  Uploaders, and remove unused ${misc:Depends}.

	* debian/changelog: Update.
