@@ -32,36 +32,3 @@ Running
 -------
 
 See schroot(1).
-
-$ schroot -l
-default
-etch
-sid
-testing
-unstable
-
-$ schroot -i -c sid
-Name: sid
-Description: Debian unstable
-Location: /srv/chroot/sid
-Groups: sbuild
-Root Groups: root
-Aliases: unstable default
-
-(use --all or -c multiple times to use multiple chroots)
-
-$ schroot -c sid /bin/ls
-[sid chroot] Running command: “/bin/ls”
-CVS          sbuild-chroot.c   sbuild-session.h  schroot.conf.5
-Makefile     sbuild-chroot.h   schroot.1         schroot.conf.5.in
-Makefile.am  sbuild-config.c   schroot.1.in
-Makefile.in  sbuild-config.h   schroot.c
-pam          sbuild-session.c  schroot.conf
-
-$ schroot -c sid -u root
-Password:
-[sid chroot] (rleigh→root) Running login shell: “/bin/bash”
-
-(if I was in root-groups in test.conf, I would be granted root access
-without authentication, but the PAM authorisation step is still
-applied; see sbuild_session_run() in sbuild-session.c.)
